Fix issue#512 - reset player button alignment

--- a/src/sites/twitch-twilight/styles/player.scss
+++ b/src/sites/twitch-twilight/styles/player.scss
@@ -3,8 +3,7 @@
 }
 
 .ffz--player-reset:before {
-	font-size: 2rem;
-	margin-top: .7rem;
+	font-size: 2.1rem;
 }
 
 .player-controls-bottom .player-tip {
